--- a/README
+++ b/README
@@ -11,7 +11,10 @@ Authors: Mircea Amarascu, Lucian Stanescu, Denis Bilenko
 License
 -------
 
-See LICENSE file.
+This software is licensed according to the GNU General Public License
+version 2. See LICENSE file for more details.
+
+For other licensing options please contact sales-request@ag-projects.com
 
 
 Project description
