--- a/TODO
+++ b/TODO
@@ -2,5 +2,15 @@
   xcap-root if Host is not present
 - Allow port in root= settings, thus making port= parameter unnecessary.
   Make sure that when listening on non-default port valid URIs are logged (see prev. issue)
+  Inside, always use xcap root with port (if non-default), i.e. put port in logs, xcap-diff docs.
 - finish global/users: test that all possible combinations (global/users GET/PUT/DELETE each app)
   return reasonable error
+- URIs in att_value. Should differently encoded be considered equal?
+  Note, that there're 2 encodings: percent-encoding, and xml attribute encoding (i.e. &quot; and friends)
+  Resource Lists RFC features example document with http URI that has percent-encoding in it.
+  Does that mean that to match against it, percents in the URI should be themselves percent-encoded?
+  Or XCAP server should use its knowledge about the app and figure out that URIs are equivalent.
+  This may be unreliable if it's unknown whether this URI was percent-encoded or not. Why
+  that URI was percent encoded in the first place, why not paste it in the documents as it is, using
+  XML escaping where necessary.
+  Make few simple xpath expressions that include that URI as att_value and post it SIMPLE mailing list.
