--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,18 @@
+openxcap (1.0.2) unstable; urgency=high
+
+  * Fixed and improved logging. it now logs much more then before and can be customized
+  * Fixed bug: xcap-caps application was not available under /global/ tree
+  * Added experimental support for sqlite database
+  * Fixed multiple xcap roots/aliases. having more then one root= entry in the config is legal now
+  * Fixed bug that made OpenXCAP dependent on specific MySQLdb versions (those having with 'reconnect' parameter)
+  * Fixed pyxml issue: previously, if pyxml was not installed, OpenXCAP would fail
+    with obscure exception on element operation. Now it refuses to start.
+  * Fixed URI parsing
+  * Better error reporting in many cases
+  * Many more bugs fixes
+
+ -- Denis Bilenko <denis@ag-projects.com>  Fri, 03 Oct 2008 05:42:45 +0200
+
 openxcap (1.0.1) unstable; urgency=low
 
   * Added proper URI parsing, so att_value may contain slashes now
