--- a/INSTALL
+++ b/INSTALL
@@ -2,6 +2,41 @@
 Installation
 ------------
 
+For Debian testing or unstable on an i386 architecture there is an official
+public repository provided by AG Projects. To use it, add these lines in
+/etc/apt/sources.list
+
+# AG Projects software deb http://ag-projects.com/debian unstable main
+deb-src http://ag-projects.com/debian unstable main
+
+Install the AG Projects debian software signing key:
+
+wget http://download.ag-projects.com/agp-debian-gpg.key apt-key add
+agp-debian-gpg.key
+
+After that, run:
+
+apt-get update apt-get install openxcap
+
+Following the same procedure you can install the xcap client and openser
+integration packages using:
+
+apt-get install python-xcaplib
+apt-get install soap-simple-proxy
+apt-get install openser-mi-proxy
+
+
+For non Debian installations, you must perform the following steps to
+install OpenXCAP:
+
+ - Download the tarball from http://download.ag-projects.com.info/OpenXCAP/
+ - Extract it using tar -xzvf openxcap-version.tar.gz and change directory
+   to the newly created openxcap directory
+ - Run python setup.py install as root.[[BR]]
+ - Copy the config.ini.sample file to /etc/openxcap/config.ini and edit it as needed.
+ - Copy the startup script, debian/openxcap.init to /etc/init.d/openxcap,
+   and start the service: /etc/init.d/openxcap start
+
 Prerequisites:
 
  - LibXML (http://xmlsoft.org/downloads.html)
