--- a/INSTALL
+++ b/INSTALL
@@ -6,7 +6,8 @@ For Debian testing or unstable on an i386 architecture there is an official
 public repository provided by AG Projects. To use it, add these lines in
 /etc/apt/sources.list
 
-# AG Projects software deb http://ag-projects.com/debian unstable main
+# AG Projects software 
+deb http://ag-projects.com/debian unstable main
 deb-src http://ag-projects.com/debian unstable main
 
 Install the AG Projects debian software signing key:
