--- a/INSTALL
+++ b/INSTALL
@@ -79,7 +79,7 @@ To run the test suite add a user to the subscriber database
 
 ./test.py --xcap-root 'https://xcap.example.com/xcap-root' --username alice --domain example.com --password 123
 
-You can also save the credentials and xcap root in ~/.xcapclient.ini:
+You can also save the credentials and xcap root in ~/xcapclient.ini:
 
 [Account]
 username = alice
