--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,12 @@
+openxcap (1.0.5) unstable; urgency=low
+
+  * fixed: openxcap with 'openser' backend could be start if enable_publish_xcapdiff=yes
+  * fixed a couple of potential Internal Server Errors
+  * added <entry> node to <uniqueness-failure> error as required by RFC
+  * nicer error messages in several cases
+
+ -- Denis Bilenko <denis@ag-projects.com>  Wed, 15 Oct 2008 10:41:26 +0200
+
 openxcap (1.0.4) unstable; urgency=low
 
   * Disabled authentication for requests in /global/ context, because it didn't work well.
