--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,7 @@
 openxcap (1.0.5) unstable; urgency=low
 
-  * fixed: openxcap with 'openser' backend couldn't be started if enable_publish_xcapdiff=yes
+  * fixed: openxcap with 'openser' backend couldn't be started
+    if enable_publish_xcapdiff=yes
   * fixed a couple of potential Internal Server Errors
   * added python-mysqldb to dependencies
   * added <entry> node to <uniqueness-failure> error as required by RFC
