--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+openxcap (1.0.6) unstable; urgency=low
+
+  * fixed: namespace bindings in the request weren't parsed correctly
+  * fixed: pid file was removed on package upgrade
+
+ -- Denis Bilenko <denis@ag-projects.com>  Thu, 16 Oct 2008 17:01:24 +0200
+
 openxcap (1.0.5) unstable; urgency=low
 
   * fixed: openxcap with 'openser' backend couldn't be started
