--- a/INSTALL
+++ b/INSTALL
@@ -3,21 +3,22 @@ Installation
 ------------
 
 For Debian testing or unstable on an i386 architecture there is an official
-public repository provided by AG Projects. To use it, add these lines in
-/etc/apt/sources.list
+public repository provided by AG Projects. Install the AG Projects debian
+software signing key:
+
+wget http://download.ag-projects.com/agp-debian-gpg.key apt-key add
+agp-debian-gpg.key
+
+Add these lines in etc/apt/sources.list
 
 # AG Projects software 
 deb http://ag-projects.com/debian unstable main
 deb-src http://ag-projects.com/debian unstable main
 
-Install the AG Projects debian software signing key:
-
-wget http://download.ag-projects.com/agp-debian-gpg.key apt-key add
-agp-debian-gpg.key
-
 After that, run:
 
-apt-get update apt-get install openxcap
+apt-get update
+apt-get install openxcap python-xcaplib
 
 Following the same procedure you can install the xcap client and openser
 integration packages using:
