Added to do to rename OpenSER to OpenSIPS in source code and documentation
darcs-hash:20081027130123-2ed11-feb6ea064c2c62c6bffa57f2d1f931855cb86aa0.gz

--- a/TODO
+++ b/TODO
@@ -14,7 +14,7 @@ High priority
 - Add xcap-directory application
 - Log the whole HTTP URI as sent by the client
 - Validation after put/delete attribute
-
+- change OpenSER to OpenSIPS
 
 Low priority
 ------------
