--- a/TODO
+++ b/TODO
@@ -2,6 +2,9 @@
 High priority
 -------------
 
+- Log all server and basic access messages to syslog, keep verbose logging (headers,bodies) in
+  /var/log/openxcap/
+- Log the whole HTTP URI as sent by the client
 - Check validity of service-uris and SIP URIs in service element of
   rls-services documents
 - Add server configuration option to allow/deny insertion of external http
@@ -9,16 +12,14 @@ High priority
   by default only individual sip uri entries. Allowing end-users to insert
   external references into the system provides and easy back-doors for
   mistakes or denial of service attacks.
-- Log all server and basic access messages to syslog, keep verbose logging (headers,bodies) in
-  /var/log/openxcap/
-- Add xcap-directory application
-- Log the whole HTTP URI as sent by the client
 - Validation after put/delete attribute
-- change OpenSER to OpenSIPS
+
 
 Low priority
 ------------
 
+- change OpenSER to OpenSIPS
+- Add xcap-directory application to list the documents for a given user
 - Allow port in root= settings, thus making port= parameter unnecessary.
   Make sure that when listening on non-default port valid URIs are logged (see prev. issue)
   Inside, always use xcap root with port (if non-default), i.e. put port in logs, xcap-diff docs
@@ -38,3 +39,5 @@ Low priority
   XML escaping where necessary.
   Make few simple xpath expressions that include that URI as att_value and post it SIMPLE mailing list.
 - Errors from twisted are text/html and from xcap are text/plain: use one (text/plain?)
+
+
